fix slider visible

--- a/src/components/creator_slider/styles/creator_slider.module.css
+++ b/src/components/creator_slider/styles/creator_slider.module.css
@@ -26,6 +26,7 @@
   width: 100%;
   padding: 0 20px;
   box-sizing: border-box;
+  overflow: visible;
 }
 
 .slide {
