--- a/src/components/intro/styles/intro.module.css
+++ b/src/components/intro/styles/intro.module.css
@@ -138,4 +138,8 @@
     max-height: 500px;
     margin: auto;
   }
+
+  .info {
+    max-width: 340px;
+  }
 }
